feat: chat controller changes
